--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
+<!DOCTYPE html>
 <html>
-<head></head>
+<head>
+<meta charset="UTF-8">
+<title>CSS experiments</title>
+<link rel="stylesheet" type="text/css" href="css.css">>
+</head>
 <body>
-<h1>hello test site!!!</h1>
+
+<header>
+<h1>CSS experiments</h1>
+</header>
+
+
+<footer>
+copyright ecmc productions
+</footer>
+
 </body>
 </html>
