--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>CSS experiments</title>
-<link rel="stylesheet" type="text/css" href="css.css">>
+<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
 
